demos/demo-https/microk8s/k8s-echo-ingress.yaml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # it is essential this is set to public in accordance to the microk8s ingress add-on setup (similarly as the ClusterIssuer)
    kubernetes.io/ingress.class: "public"
spec:
  tls:
    - hosts:
      - 54.196.247.123.nip.io
      secretName: letsencrypt-prod
  rules:
  - host: 54.196.247.123.nip.io
    http:
        paths:
        - pathType: Prefix
          path: "/echo1"
          backend:
            service:
              name: echo1
              port:
                number: 80
        - pathType: Prefix
          path: "/echo2"
          backend:
            service:
              name: echo2
              port:
                number: 80
